syntax = "proto3";

package exchangePackage;

service Exchange {
   rpc Exchange (ExchangeRequest) returns (ExchangeResponse) {}
}

message ExchangeRequest {
   float value = 1;
   string from = 2;
   string to = 3;
}

message ExchangeResponse {
   float value = 1;
   string symbol = 2;
}